--- a/src/components/Profile/Posts/Post/Post.module.css
+++ b/src/components/Profile/Posts/Post/Post.module.css
@@ -1,5 +1,26 @@
-.item img {
+.item {
+    width: 25%;
+    margin: 5px;
+    padding: 10px;
+
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+}
+
+.ava {
     width: 50px;
-    height: 50px;
     border-radius: 50%;
+    border: 3px solid rgb(144, 29, 219);
+}
+
+.message {
+    font-size: 15px;
+}
+
+.likes {
+    font-size: 10px;
+}
+
+.like {
+    width: 10px;
 }
