--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -1,4 +1,4 @@
-.textareaBlock {
+.messageInputBlock {
     width: 25%;
 }
 
@@ -7,12 +7,19 @@ textarea {
     overflow: none;
     resize: none;
 
+    width: 200px;
+    height: 50px;
+
     border: 3px solid #999;
     border-radius: 10px;
 }
 
 button {
     margin: 5px;
-    border-radius: 10px;
+    
+    width: 50px;
+    height: 50px;
+
     border: 3px solid #999;
+    border-radius: 10px;
 }
