--- a/src/components/Profile/Posts/Posts.module.css
+++ b/src/components/Profile/Posts/Posts.module.css
@@ -4,6 +4,7 @@
 
 textarea {
     margin: 5px;
+    padding: 10px;
     overflow: none;
     resize: none;
 
@@ -17,9 +18,16 @@ textarea {
 button {
     margin: 5px;
     
-    width: 50px;
+    width: 75px;
     height: 50px;
 
     border: 3px solid #999;
     border-radius: 10px;
+
+    cursor: pointer;
+}
+
+button:hover {
+    color: rgb(18, 124, 156);
+    border: 3px solid rgb(18, 124, 156);
 }
